tests/errors/record-equals-not-colon/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0026]: Unexpected token (a '='). Expected a '}'.
  │
  ├─𜱶 help: record fields are separated with `:`, not `=` (e.g. `{ name: value }`).
  │
2 │ def main = { a = 1 }
  │                ^
  ╰─𜱶 tests/errors/record-equals-not-colon/main.pa:2:16
